# animaOS-SWARM

./: .dockerignore  .gitignore  .oxlintrc.json  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  ROADMAP.md  nx.json  package.json  paper.txt  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json
hosts/rust-daemon/: .env.staging.example  Cargo.toml  Dockerfile  README.md  project.json
hosts/rust-daemon/crates/anima-core/: README.md
hosts/rust-daemon/crates/anima-core/src/: model.rs
hosts/rust-daemon/crates/anima-daemon/: Cargo.toml  README.md
hosts/rust-daemon/crates/anima-daemon/migrations/: 20260412000000_step_log.sql
hosts/rust-daemon/crates/anima-daemon/src/: events.rs  lib.rs  state.rs  tools.rs
hosts/rust-daemon/crates/anima-daemon/src/routes/: agents.rs  api.rs  health.rs  memories.rs  mod.rs  swarms.rs
hosts/rust-daemon/crates/anima-daemon/src/routes/contracts/: agents.rs  mod.rs  (+1 more)
hosts/rust-daemon/crates/anima-daemon/tests/: health.rs  memory_api.rs  step_log_integration.rs  swarm_api.rs
hosts/rust-daemon/crates/anima-memory/: Cargo.toml
hosts/rust-daemon/crates/anima-memory/src/: bm25.rs
hosts/rust-daemon/crates/anima-memory/src/memory_manager/: tests.rs  types.rs
hosts/rust-daemon/crates/anima-swarm/src/: message_bus.rs
hosts/rust-daemon/crates/anima-swarm/src/strategies/: supervisor.rs
hosts/rust-daemon/crates/anima-swarm/tests/: message_bus.rs
hosts/rust-daemon/migrations/: 20260412000000_step_log.sql  20260508000000_relax_step_index_unique.sql
hosts/rust-daemon/src/: app.rs  components.rs  control_plane_store.rs  events.rs  lib.rs  main.rs  memory_embeddings.rs  memory_store.rs  model.rs  postgres.rs  runtime_model.rs  state.rs  tools.rs
hosts/rust-daemon/src/app/: lifecycle.rs  persistence.rs
hosts/rust-daemon/src/components/: evaluators.rs  providers.rs
hosts/rust-daemon/src/model/: dispatch.rs  render.rs  tests.rs
hosts/rust-daemon/src/routes/: agencies.rs  agents.rs  health.rs  http.rs  memories.rs  mod.rs  swarms.rs
hosts/rust-daemon/src/routes/contracts/: agencies.rs  agents.rs  memories.rs  mod.rs  providers.rs  shared.rs  swarms.rs
hosts/rust-daemon/src/routes/swarms/: events.rs
hosts/rust-daemon/src/runtime_model/: anthropic.rs  common.rs  google.rs  ollama.rs  openai_compatible.rs  tests.rs
hosts/rust-daemon/src/state/: runtime_events.rs  swarm_relationships.rs  swarm_runtime.rs  swarm_tools.rs
hosts/rust-daemon/src/tools/: filesystem.rs  memory.rs  process.rs  tests.rs  todo.rs  utility.rs  web.rs  workspace.rs
hosts/rust-daemon/src/tools/filesystem/: edit.rs  search.rs
hosts/rust-daemon/src/tools/process/: background.rs  shell.rs
hosts/rust-daemon/tests/: agent_api.rs  health.rs  memory_api.rs  swarm_api.rs
hosts/rust-daemon/tests/support/: mod.rs
(+250 files in other folders)
