[workspace]
members = [
    "packages/core-rust/crates/anima-core",
    "packages/core-rust/crates/anima-memory",
    "packages/core-rust/crates/anima-swarm",
    "hosts/rust-daemon",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"
authors = ["animaOS contributors"]

[workspace.dependencies]
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "migrate", "macros", "json", "chrono"], default-features = false }

[workspace.lints.rust]
unsafe_code = "forbid"
