[package]
name = "anima-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anima-core = { path = "../../packages/core-rust/crates/anima-core" }
anima-memory = { path = "../../packages/core-rust/crates/anima-memory" }
anima-swarm = { path = "../../packages/core-rust/crates/anima-swarm" }
async-trait = "0.1"
axum = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
futures = "0.3"
meval = "0.2"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { workspace = true }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["request-id", "timeout", "trace"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-scalar = { version = "0.3", features = ["axum"] }

[dev-dependencies]
http-body-util = "0.1"

[lints]
workspace = true
