[package]
name = "anima-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anima-core = { path = "../anima-core" }
anima-memory = { path = "../anima-memory" }
anima-swarm = { path = "../anima-swarm" }
async-trait = "0.1"
axum = "0.8"
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { workspace = true }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync"] }
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum", "vendored"] }

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }

[lints]
workspace = true
